adds sidebar title overview

--- a/administer/accounts-teams.mdx
+++ b/administer/accounts-teams.mdx
@@ -1,6 +1,7 @@
 ---
 title: Accounts and teams
 'og:description': Chronosphere Observability Platform lets you manage user accounts, roles, and team permissions for streamlined access and collaboration.
+sidebarTitle: Overview
 ---
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
 
