--- a/administer/collections.mdx
+++ b/administer/collections.mdx
@@ -1,5 +1,6 @@
 ---
 title: Collections
+sidebarTitle: Overview
 ---
 import { CollectionNavIcon} from '/snippets/Icons.jsx';
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
