--- a/control/shaping/reduce-cardinality.mdx
+++ b/control/shaping/reduce-cardinality.mdx
@@ -1,6 +1,7 @@
 ---
 title: Reduce cardinality
 'og:description': Learn how to reduce metric cardinality.
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
