--- a/fleets.mdx
+++ b/fleets.mdx
@@ -1,6 +1,7 @@
 ---
 title: Fleets
 'og:description': Learn about fleet management in Chronosphere Telemetry Pipeline.
+sidebarTitle: Overview
 ---
 {/* -- dri: Alexa Kreizinger -- */}
 
