--- a/fleets/agent.mdx
+++ b/fleets/agent.mdx
@@ -1,6 +1,7 @@
 ---
 title: Agent types
 'og:description': Learn about the types of agents compatible with Chronosphere Telemetry Pipeline.
+sidebarTitle: Overview
 ---
 {/* -- dri: Alexa Kreizinger -- */}
 
