--- a/ingest/metrics-traces/collector.mdx
+++ b/ingest/metrics-traces/collector.mdx
@@ -1,5 +1,6 @@
 ---
 title: Chronosphere Collector
+sidebarTitle: Overview
 ---
 import CollectorVersions from '/snippets/_partials/collector-versions.mdx';
 
