--- a/investigate/alerts/notifications/notifiers.mdx
+++ b/investigate/alerts/notifications/notifiers.mdx
@@ -1,6 +1,7 @@
 ---
 title: Notifiers
 'og:description': View and create notifiers with Chronosphere Observability Platform, Chronoctl, or Terraform.
+sidebarTitle: Overview
 ---
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
