--- a/investigate/querying/metrics/derived-telemetry.mdx
+++ b/investigate/querying/metrics/derived-telemetry.mdx
@@ -1,6 +1,7 @@
 ---
 title: Derived telemetry
 'og:description': Learn about derived telemetry and how you can
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
