--- a/observe/services.mdx
+++ b/observe/services.mdx
@@ -1,6 +1,7 @@
 ---
 title: Services
 'og:description': Learn about services in Chronosphere Observability Platform.
+sidebarTitle: Overview
 ---
 import { ServiceNavIcon } from '/snippets/Icons.jsx';
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
