--- a/overview/types.mdx
+++ b/overview/types.mdx
@@ -1,6 +1,7 @@
 ---
 title: Data types
 'og:description': Learn how to explore telemetry data in Observability Platform.
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
