--- a/pipeline-data/processing-rules.mdx
+++ b/pipeline-data/processing-rules.mdx
@@ -1,6 +1,7 @@
 ---
 title: Processing rules
 'og:description': Transform the data that passes through your telemetry pipeline.
+sidebarTitle: Overview
 ---
 import PipelineFlow from '/snippets/_partials/pipeline-flow-processing-rules.mdx';
 
