--- a/pipeline-install/install-operator.mdx
+++ b/pipeline-install/install-operator.mdx
@@ -1,6 +1,7 @@
 ---
 title: Install a Core Operator
 'og:description': Install a Core Operator to run Telemetry Pipeline in Kubernetes or Linux.
+sidebarTitle: Overview
 ---
 {/* -- dri: Alexa Kreizinger -- */}
 
