--- a/tooling/chronoctl.mdx
+++ b/tooling/chronoctl.mdx
@@ -1,6 +1,7 @@
 ---
 title: Chronoctl
 'og:description': Use Chronoctl to manage your organization's Chronosphere Observability Platform resources.
+sidebarTitle: Overview
 ---
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
 
