--- a/investigate/analyze.mdx
+++ b/investigate/analyze.mdx
@@ -1,6 +1,7 @@
 ---
 title: Analyze data
 'og:description': Learn how to analyze data and queries in Observability Platform.
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
