--- a/observe/dashboards/classic-dashboards.mdx
+++ b/observe/dashboards/classic-dashboards.mdx
@@ -1,5 +1,6 @@
 ---
 title: Classic dashboards
+sidebarTitle: Overview
 ---
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
 
