--- a/pipeline-cli.mdx
+++ b/pipeline-cli.mdx
@@ -1,6 +1,7 @@
 ---
 title: Pipeline CLI
 'og:description': Learn about the Chronosphere Telemetry Pipeline command-line tool.
+sidebarTitle: Overview
 ---
 {/* -- dri: Alexa Kreizinger -- */}
 
