adds frame to images

--- a/administer/limits-licensing/limits/query-limits.mdx
+++ b/administer/limits-licensing/limits/query-limits.mdx
@@ -286,7 +286,9 @@ or [derived metrics](/investigate/querying/metrics/derived-telemetry/derived-met
 aggregated subset of the raw data, or break up the query into smaller chunks (by
 time, for instance) to reduce returned data points.
 
+<Frame>
 ![query truncation message](/public/doc-assets/query_truncation_msg.png)
+</Frame>
 
 ### Enable or disable query truncation
 
@@ -304,7 +306,9 @@ result in timeouts (no results returned for a single query), or might cause the
 browser to crash.
 </Info>
 
+<Frame>
 ![query truncation options](/public/doc-assets/query_truncation_options.png)
+</Frame>
 
 ## Query protections in the database
 
