--- a/ingest/metrics-traces/collector/install/kubernetes.mdx
+++ b/ingest/metrics-traces/collector/install/kubernetes.mdx
@@ -268,4 +268,6 @@ different input data volume (4k and 3k metrics per second, respectively). The me
 usage doesn't change significantly after enabling the buffering feature or increasing
 the failure rate from 0% to 50%.
 
+<Frame>
 ![Graph showing effect of buffering on memory usage](/public/doc-assets/buffering-collector.png)
+</Frame>
