--- a/ingest/metrics-traces/gcp.mdx
+++ b/ingest/metrics-traces/gcp.mdx
@@ -413,7 +413,9 @@ where:
 The following is an example of how to map a CloudSQL metric name in Google Cloud to a
 metric name in Observability Platform:
 
+<Frame>
 ![Google Cloud metric configuration example](/public/doc-assets/GC-example.png)
+</Frame>
 
 For this metric, `cloudsql_database` is the monitored resource name and
 `cloudsql.googleapis.com/database/active_directory/domain_reachable` is the fully
