--- a/investigate/analyze/usage.mdx
+++ b/investigate/analyze/usage.mdx
@@ -377,7 +377,9 @@ any queries or references and therefore might not be very valuable. Consider usi
 Use the [Aggregation Rules UI](/control/shaping/reduce-cardinality/review-aggregation-rules)
 to review the impact of rollup rules.
 
+<Frame>
 ![A high volume](/public/doc-assets/usage-profiler-high-unique-values.png)
+</Frame>
 
 ### Metrics to add
 
