--- a/investigate/querying/metrics/builder.mdx
+++ b/investigate/querying/metrics/builder.mdx
@@ -20,7 +20,9 @@ Click **Cancel** to close the tool without saving, **Done** to save and close,
 and <Icon icon="angles-up-down" /> **Expand Query Builder** to toggle
 full-screen mode.
 
+<Frame>
 ![Query Builder overview](/public/doc-assets/temp-qb-overview.png)
+</Frame>
 
 ## Expression section
 
