--- a/investigate/querying/metrics/explorer-classic.mdx
+++ b/investigate/querying/metrics/explorer-classic.mdx
@@ -94,7 +94,9 @@ opens the classic Metrics Explorer that shows a hierarchical menu with metrics g
 by their prefix. This is a good starting point if you want to explore which metrics
 are available.
 
+<Frame>
 ![Metrics menu](/public/doc-assets/metrics-explorer-metrics-menu.png)
+</Frame>
 
 Selecting metrics from the **Metrics** menu adds them to the **Query field**.
 
@@ -130,7 +132,9 @@ side-by-side or to review related data together on one page.
 To open the split view, click **Split** to duplicate the current query and split the
 page into two side-by-side queries.
 
+<Frame>
 ![Split query](/public/doc-assets/metrics-explorer-split-button.png)
+</Frame>
 
 In split view, you can link the <Icon icon="clock" /> time pickers for both
 panels by clicking one of the time-sync buttons attached to the time pickers.
@@ -154,7 +158,9 @@ don't expire.
 Click **Query history** for a list of queries that you have used in Explore local
 to your browser.
 
+<Frame>
 ![Query history overview](/public/doc-assets/metrics-explorer-query-history.png)
+</Frame>
 
 For each individual query, you can:
 
