--- a/investigate/querying/traces.mdx
+++ b/investigate/querying/traces.mdx
@@ -160,7 +160,9 @@ To search traces:
    with the statistics, traces, and topology views. The timeline shows an overview of
    the current search, with counts of successful and failed traces plotted over time.
 
+   <Frame>
    ![A screenshot of a graph of a traces search](/public/doc-assets/traces-graph.png)
+   </Frame>
 
 1. To copy a short URL to your clipboard you can share with other users,
    click <Icon icon="link" /> **Copy URL**. Use this capability for sharing links
@@ -411,7 +413,9 @@ To group and narrow results:
    You identify `visa` as the credit card brand with the highest request rate among
    all cards that users make payments with.
 
+   <Frame>
    ![Screenshot showing query results in the Span statistics tab of Trace Explorer.](/public/doc-assets/traces-statistics-results.png)
+   </Frame>
 
 1. Click the bar in the results set that includes **visa**, and in the resulting
    dialog, click **Differential Diagnosis (DDx)**.
