--- a/navigate.mdx
+++ b/navigate.mdx
@@ -125,7 +125,9 @@ in the web app. Chips are generally used as filters to narrow down the scope of
 searches or queries. [Pinned scopes](/navigate/pinned-scopes) and
 [search](#search) are two examples of pages using chips.
 
+<Frame>
 ![Chips in a pinned scope](/public/doc-assets/chip-pinned-scope.png)
+</Frame>
 
 If a chip has a <Icon icon="xmark" /> close icon, you can click the icon to
 remove the chip. Chips without a close icon are pinned scopes that can be deactivated
