--- a/navigate/pinned-scopes.mdx
+++ b/navigate/pinned-scopes.mdx
@@ -21,7 +21,9 @@ Chronosphere Observability Platform.
 Click the **Pin scope** box in a supported page to display the configured filters.
 Click any filter to select it.
 
+<Frame>
 ![Pinned scopes page display](/public/doc-assets/pinned-scopes-user-light.png)
+</Frame>
 
 A pinned scope can exclude all data from a page, or sections of a page. For monitors
 on a service page, if no monitors match the selected filter, Observability Platform
