--- a/observe/dashboards/classic-dashboards.mdx
+++ b/observe/dashboards/classic-dashboards.mdx
@@ -141,7 +141,9 @@ on graphs, set these values for the annotation's fields:
 
 Based on these settings, this is how the annotations looks:
 
+<Frame>
 ![Dashboard annotation example](/public/doc-assets/annotations_example.png)
+</Frame>
 
 <Info>
 To add alerts as annotations, use the special `ALERTS` metric. For details, see
