--- a/investigate/querying/traces/features.mdx
+++ b/investigate/querying/traces/features.mdx
@@ -369,4 +369,6 @@ your **Span characteristics**.
 Edges, which are lines between services, provide details about connected services.
 Click an edge to view the requests and trace duration between two services.
 
+<Frame>
 ![Topology View with a service selected](/public/doc-assets/trace-topology-view.png)
+</Frame>
