adds sidebar title

--- a/overview/concepts.mdx
+++ b/overview/concepts.mdx
@@ -1,5 +1,6 @@
 ---
 title: Observability Platform concepts
+sidebarTitle: Overview
 'og:description': Learn more about components, concepts, and terms used by Chronosphere Observability Platform.
 ---
 {/* -- dri: Adam Locke -- */}
