fix overview sidebar titles

--- a/control/shaping/rules.mdx
+++ b/control/shaping/rules.mdx
@@ -1,7 +1,7 @@
 ---
 title: Metric shaping rules
 'og:description': Learn about the ways to use rules in Chronosphere Observability Platform to shape metric data.
-sidebarTitle: Shaping rules
+sidebarTitle: Overview
 ---
 import InfoTerraformLockout from '/snippets/_partials/info-terraformlockout.mdx';
 
