--- a/ingest/logs.mdx
+++ b/ingest/logs.mdx
@@ -1,7 +1,7 @@
 ---
 title: Ingest log data
 'og:description': Learn about how to ingest log data into Observability Platform.
-sidebarTitle: Logs
+sidebarTitle: Overview
 ---
 import LogIngest from '/snippets/_partials/log-ingest.mdx';
 
@@ -16,7 +16,7 @@ Platform.
 After ingesting log data, verify Observability Platform is receiving your logs
 as anticipated.
 
-<Columns cols={2}>
+<Columns cols={1}>
   <Card
     icon="hexagon-check"
     title="Verify log data"
