--- a/ingest/metrics-traces.mdx
+++ b/ingest/metrics-traces.mdx
@@ -1,6 +1,6 @@
 ---
 title: Ingest metric and trace data
-sidebarTitle: Metrics and traces
+sidebarTitle: Overview
 'og:description': Learn about the collection methods used to ingest metrics and traces into Chronosphere Observability Platform.
 ---
 {/* -- dri: Garrett Guillotte -- */}
