--- a/ingest/metrics-traces/azure.mdx
+++ b/ingest/metrics-traces/azure.mdx
@@ -1,6 +1,6 @@
 ---
 title: Azure metrics integration
-sidebarTitle: Azure
+sidebarTitle: Overview
 'og:description': Learn how to ingest Azure metrics into Chronosphere Observability Platform.
 ---
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
