--- a/ingest/metrics-traces/collector/addl-metrics.mdx
+++ b/ingest/metrics-traces/collector/addl-metrics.mdx
@@ -1,6 +1,6 @@
 ---
 title: Ingest additional metrics
-sidebarTitle: Additional metrics
+sidebarTitle: Overview
 ---
 {/* -- dri: Garrett Guillotte -- */}
 
