--- a/ingest/metrics-traces/collector/configure.mdx
+++ b/ingest/metrics-traces/collector/configure.mdx
@@ -1,6 +1,6 @@
 ---
 title: Configure your Chronosphere Collector
-sidebarTitle: Configure
+sidebarTitle: Overview
 ---
 import RelabelExpansion from '/snippets/_partials/relabel-expansion.mdx';
 
