--- a/ingest/metrics-traces/collector/discover.mdx
+++ b/ingest/metrics-traces/collector/discover.mdx
@@ -1,6 +1,6 @@
 ---
 title: Configure Chronosphere Collector service discovery for Prometheus metrics
-sidebarTitle: Discover
+sidebarTitle: Overview
 ---
 {/* -- dri: Garrett Guillotte -- */}
 
