--- a/ingest/metrics-traces/collector/install.mdx
+++ b/ingest/metrics-traces/collector/install.mdx
@@ -1,6 +1,6 @@
 ---
 title: Install the Chronosphere Collector
-sidebarTitle: Install
+sidebarTitle: Overview
 ---
 {/* -- dri: Garrett Guillotte -- */}
 
