--- a/ingest/metrics-traces/collector/mappings.mdx
+++ b/ingest/metrics-traces/collector/mappings.mdx
@@ -1,6 +1,6 @@
 ---
 title: Map data sources to Chronosphere
-sidebarTitle: Mappings
+sidebarTitle: Overview
 ---
 {/* -- dri: Garrett Guillotte -- */}
 
