--- a/ingest/metrics-traces/collector/monitor.mdx
+++ b/ingest/metrics-traces/collector/monitor.mdx
@@ -1,6 +1,6 @@
 ---
 title: Verify and monitor the Collector
-sidebarTitle: Verify and monitor
+sidebarTitle: Overview
 ---
 {/* -- dri: Garrett Guillotte -- */}
 
