--- a/investigate/alerts/alert-details.mdx
+++ b/investigate/alerts/alert-details.mdx
@@ -2,6 +2,7 @@
 title: Alert details
 'og:description': Chronosphere Observability Platform generates detailed visualizations of each triggered alert.
 robots: noindex, nofollow
+sidebarTitle: Overview
 ---
 import EarlyAccess from '/snippets/_partials/early-access.mdx';
 
