--- a/investigate/querying.mdx
+++ b/investigate/querying.mdx
@@ -1,7 +1,7 @@
 ---
 title: Search and query telemetry data
 'og:description': Learn about how to query your telemetry data from Observability Platform.
-sidebarTitle: Query data
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
