--- a/investigate/querying/metrics.mdx
+++ b/investigate/querying/metrics.mdx
@@ -1,7 +1,7 @@
 ---
 title: Search and query metrics
 'og:description': Learn how to search and query metrics in Metrics Explorer.
-sidebarTitle: Search metrics
+sidebarTitle: Overview
 ---
 import OtherQueryingFeatures from '/snippets/_partials/other-querying-features.mdx';
 import RegexGlob from '/snippets/_partials/regex-glob.mdx';
