--- a/observe/dashboards.mdx
+++ b/observe/dashboards.mdx
@@ -1,7 +1,7 @@
 ---
 title: Visualize data using dashboards
 'og:description': Use dashboards to create and organize data visualizations in Chronosphere Observability Platform.
-sidebarTitle: Dashboards
+sidebarTitle: Overview
 ---
 import { CollectionIcon, ServiceIcon} from '/snippets/Icons.jsx';
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
