--- a/observe/dashboards/customization.mdx
+++ b/observe/dashboards/customization.mdx
@@ -1,7 +1,7 @@
 ---
 title: Customize dashboards
 'og:description': Customize dashboard features in Chronosphere.
-sidebarTitle: Customize
+sidebarTitle: Overview
 ---
 import LimitedAvail from '/snippets/_partials/limited-avail.mdx';
 
