--- a/observe/enable-events.mdx
+++ b/observe/enable-events.mdx
@@ -1,7 +1,7 @@
 ---
 title: Overlay and enable change events
 'og:description': Overlay and enable change events in Observability Platform to understand what changed in your environment.
-sidebarTitle: Events
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
