--- a/pipeline-configure/kubernetes.mdx
+++ b/pipeline-configure/kubernetes.mdx
@@ -1,7 +1,7 @@
 ---
 title: Kubernetes deployment settings
 'og:description': Configure your Kubernetes deployment settings in Chronosphere Telemetry Pipeline.
-sidebarTitle: Kubernetes settings
+sidebarTitle: Overview
 ---
 {/* -- dri: Alexa Kreizinger -- */}
 
@@ -13,7 +13,7 @@ settings.
 
 {/* markdownlint-disable MD013 */}
 {/* vale Chronosphere.SentenceLengthLong = NO */}
-<Columns cols={2}>
+<Columns cols={1}>
   <Card icon="brackets-curly" title="Annotations" href="/pipeline-configure/kubernetes/annotations" />
   <Card icon="brackets-curly" title="Namespaces" href="/pipeline-configure/kubernetes/namespaces" />
   <Card icon="train" title="Pods and containers" href="/pipeline-configure/kubernetes/pods-containers" />
