--- a/pipeline-data/plugins/destination-plugins.mdx
+++ b/pipeline-data/plugins/destination-plugins.mdx
@@ -1,6 +1,6 @@
 ---
 title: Send telemetry data with destination plugins
-sidebarTitle: Destination
+sidebarTitle: Overview
 'og:description': Send telemetry data to various destinations.
 ---
 import PipelineFlow from '/snippets/_partials/pipeline-flow-destination.mdx';
@@ -18,53 +18,53 @@ of storage and analysis tools. Different destination plugins support different d
 including logs, metrics, and traces.
 
 <Columns cols={2} rowGroup="2">
-  <Card icon="plug" title="Amazon CloudWatch" href="/pipeline-data/plugins/destination-plugins/amazon-cloudwatch"></Card>
-  <Card icon="plug" title="Amazon Kinesis Firehose" href="/pipeline-data/plugins/destination-plugins/amazon-kinesis-firehose"></Card>
-  <Card icon="plug" title="Amazon Kinesis Streams" href="/pipeline-data/plugins/destination-plugins/amazon-kinesis-streams"></Card>
-  <Card icon="plug" title="Amazon S3" href="/pipeline-data/plugins/destination-plugins/amazon-s3"></Card>
-  <Card icon="plug" title="Axiom" href="/pipeline-data/plugins/destination-plugins/axiom"></Card>
-  <Card icon="plug" title="Azure Blob Storage" href="/pipeline-data/plugins/destination-plugins/azure-blob-storage"></Card>
-  <Card icon="plug" title="Azure Data Explorer" href="/pipeline-data/plugins/destination-plugins/azure-data-explorer"></Card>
-  <Card icon="plug" title="Azure Event Hubs" href="/pipeline-data/plugins/destination-plugins/azure-eventhub"></Card>
-  <Card icon="plug" title="Azure Logs Ingestion API" href="/pipeline-data/plugins/destination-plugins/azure-ingestion-api"></Card>
-  <Card icon="plug" title="Azure Monitor" href="/pipeline-data/plugins/destination-plugins/azure-monitor"></Card>
-  <Card icon="plug" title="Azure Sentinel" href="/pipeline-data/plugins/destination-plugins/azure-sentinel"></Card>
-  <Card icon="plug" title="Chronosphere" href="/pipeline-data/plugins/destination-plugins/chronosphere"></Card>
-  <Card icon="plug" title="Clickhouse" href="/pipeline-data/plugins/destination-plugins/clickhouse"></Card>
-  <Card icon="plug" title="Confluent Cloud" href="/pipeline-data/plugins/destination-plugins/confluent-cloud"></Card>
-  <Card icon="plug" title="Coralogix" href="/pipeline-data/plugins/destination-plugins/coralogix"></Card>
-  <Card icon="plug" title="CrowdStrike" href="/pipeline-data/plugins/destination-plugins/crowdstrike"></Card>
-  <Card icon="plug" title="Datadog" href="/pipeline-data/plugins/destination-plugins/datadog"></Card>
-  <Card icon="plug" title="Devo Cloud" href="/pipeline-data/plugins/destination-plugins/devo"></Card>
-  <Card icon="plug" title="Dynatrace" href="/pipeline-data/plugins/destination-plugins/dynatrace"></Card>
-  <Card icon="plug" title="Elasticsearch" href="/pipeline-data/plugins/destination-plugins/elasticsearch"></Card>
-  <Card icon="plug" title="Exabeam" href="/pipeline-data/plugins/destination-plugins/exabeam"></Card>
-  <Card icon="plug" title="Forward" href="/pipeline-data/plugins/destination-plugins/forward"></Card>
-  <Card icon="plug" title="Google Chronicle" href="/pipeline-data/plugins/destination-plugins/google-chronicle"></Card>
-  <Card icon="plug" title="Google Cloud BigQuery" href="/pipeline-data/plugins/destination-plugins/google-bigquery"></Card>
-  <Card icon="plug" title="Google Cloud Operations Suite" href="/pipeline-data/plugins/destination-plugins/google-operations-suite"></Card>
-  <Card icon="plug" title="Grafana Loki" href="/pipeline-data/plugins/destination-plugins/grafana-loki"></Card>
-  <Card icon="plug" title="Graylog" href="/pipeline-data/plugins/destination-plugins/graylog"></Card>
-  <Card icon="plug" title="HTTP" href="/pipeline-data/plugins/destination-plugins/http"></Card>
-  <Card icon="plug" title="InfluxDB" href="/pipeline-data/plugins/destination-plugins/influxdb"></Card>
-  <Card icon="plug" title="Kafka" href="/pipeline-data/plugins/destination-plugins/kafka"></Card>
-  <Card icon="plug" title="New Relic" href="/pipeline-data/plugins/destination-plugins/new-relic"></Card>
-  <Card icon="plug" title="Null" href="/pipeline-data/plugins/destination-plugins/null"></Card>
-  <Card icon="plug" title="Observe" href="/pipeline-data/plugins/destination-plugins/observe"></Card>
-  <Card icon="plug" title="Oracle" href="/pipeline-data/plugins/destination-plugins/oracle"></Card>
-  <Card icon="plug" title="OpenSearch" href="/pipeline-data/plugins/destination-plugins/opensearch"></Card>
-  <Card icon="plug" title="OpenTelemetry" href="/pipeline-data/plugins/destination-plugins/opentelemetry"></Card>
-  <Card icon="plug" title="Prometheus Exporter" href="/pipeline-data/plugins/destination-plugins/prometheus-exporter"></Card>
-  <Card icon="plug" title="Prometheus Remote Write" href="/pipeline-data/plugins/destination-plugins/prometheus-remote-write"></Card>
-  <Card icon="plug" title="Redpanda Cloud" href="/pipeline-data/plugins/destination-plugins/redpanda"></Card>
-  <Card icon="plug" title="Scalyr" href="/pipeline-data/plugins/destination-plugins/scalyr"></Card>
-  <Card icon="plug" title="Slack" href="/pipeline-data/plugins/destination-plugins/slack"></Card>
-  <Card icon="plug" title="Splunk" href="/pipeline-data/plugins/destination-plugins/splunk"></Card>
-  <Card icon="plug" title="Standard output" href="/pipeline-data/plugins/destination-plugins/standard-output"></Card>
-  <Card icon="plug" title="Sumo Logic" href="/pipeline-data/plugins/destination-plugins/sumologic"></Card>
-  <Card icon="plug" title="Syslog" href="/pipeline-data/plugins/destination-plugins/syslog"></Card>
-  <Card icon="plug" title="TCP" href="/pipeline-data/plugins/destination-plugins/tcp"></Card>
-  <Card icon="plug" title="UDP" href="/pipeline-data/plugins/destination-plugins/udp"></Card>
-  <Card icon="plug" title="VictoriaMetrics" href="/pipeline-data/plugins/destination-plugins/victoriametrics"></Card>
-  <Card icon="plug" title="Vivo" href="/pipeline-data/plugins/destination-plugins/vivo"></Card>
+  <Card icon="plug" title="Amazon CloudWatch" href="/pipeline-data/plugins/destination-plugins/amazon-cloudwatch"/>
+  <Card icon="plug" title="Amazon Kinesis Firehose" href="/pipeline-data/plugins/destination-plugins/amazon-kinesis-firehose"/>
+  <Card icon="plug" title="Amazon Kinesis Streams" href="/pipeline-data/plugins/destination-plugins/amazon-kinesis-streams"/>
+  <Card icon="plug" title="Amazon S3" href="/pipeline-data/plugins/destination-plugins/amazon-s3"/>
+  <Card icon="plug" title="Axiom" href="/pipeline-data/plugins/destination-plugins/axiom"/>
+  <Card icon="plug" title="Azure Blob Storage" href="/pipeline-data/plugins/destination-plugins/azure-blob-storage"/>
+  <Card icon="plug" title="Azure Data Explorer" href="/pipeline-data/plugins/destination-plugins/azure-data-explorer"/>
+  <Card icon="plug" title="Azure Event Hubs" href="/pipeline-data/plugins/destination-plugins/azure-eventhub"/>
+  <Card icon="plug" title="Azure Logs Ingestion API" href="/pipeline-data/plugins/destination-plugins/azure-ingestion-api"/>
+  <Card icon="plug" title="Azure Monitor" href="/pipeline-data/plugins/destination-plugins/azure-monitor"/>
+  <Card icon="plug" title="Azure Sentinel" href="/pipeline-data/plugins/destination-plugins/azure-sentinel"/>
+  <Card icon="plug" title="Chronosphere" href="/pipeline-data/plugins/destination-plugins/chronosphere"/>
+  <Card icon="plug" title="Clickhouse" href="/pipeline-data/plugins/destination-plugins/clickhouse"/>
+  <Card icon="plug" title="Confluent Cloud" href="/pipeline-data/plugins/destination-plugins/confluent-cloud"/>
+  <Card icon="plug" title="Coralogix" href="/pipeline-data/plugins/destination-plugins/coralogix"/>
+  <Card icon="plug" title="CrowdStrike" href="/pipeline-data/plugins/destination-plugins/crowdstrike"/>
+  <Card icon="plug" title="Datadog" href="/pipeline-data/plugins/destination-plugins/datadog"/>
+  <Card icon="plug" title="Devo Cloud" href="/pipeline-data/plugins/destination-plugins/devo"/>
+  <Card icon="plug" title="Dynatrace" href="/pipeline-data/plugins/destination-plugins/dynatrace"/>
+  <Card icon="plug" title="Elasticsearch" href="/pipeline-data/plugins/destination-plugins/elasticsearch"/>
+  <Card icon="plug" title="Exabeam" href="/pipeline-data/plugins/destination-plugins/exabeam"/>
+  <Card icon="plug" title="Forward" href="/pipeline-data/plugins/destination-plugins/forward"/>
+  <Card icon="plug" title="Google Chronicle" href="/pipeline-data/plugins/destination-plugins/google-chronicle"/>
+  <Card icon="plug" title="Google Cloud BigQuery" href="/pipeline-data/plugins/destination-plugins/google-bigquery"/>
+  <Card icon="plug" title="Google Cloud Operations Suite" href="/pipeline-data/plugins/destination-plugins/google-operations-suite"/>
+  <Card icon="plug" title="Grafana Loki" href="/pipeline-data/plugins/destination-plugins/grafana-loki"/>
+  <Card icon="plug" title="Graylog" href="/pipeline-data/plugins/destination-plugins/graylog"/>
+  <Card icon="plug" title="HTTP" href="/pipeline-data/plugins/destination-plugins/http"/>
+  <Card icon="plug" title="InfluxDB" href="/pipeline-data/plugins/destination-plugins/influxdb"/>
+  <Card icon="plug" title="Kafka" href="/pipeline-data/plugins/destination-plugins/kafka"/>
+  <Card icon="plug" title="New Relic" href="/pipeline-data/plugins/destination-plugins/new-relic"/>
+  <Card icon="plug" title="Null" href="/pipeline-data/plugins/destination-plugins/null"/>
+  <Card icon="plug" title="Observe" href="/pipeline-data/plugins/destination-plugins/observe"/>
+  <Card icon="plug" title="Oracle" href="/pipeline-data/plugins/destination-plugins/oracle"/>
+  <Card icon="plug" title="OpenSearch" href="/pipeline-data/plugins/destination-plugins/opensearch"/>
+  <Card icon="plug" title="OpenTelemetry" href="/pipeline-data/plugins/destination-plugins/opentelemetry"/>
+  <Card icon="plug" title="Prometheus Exporter" href="/pipeline-data/plugins/destination-plugins/prometheus-exporter"/>
+  <Card icon="plug" title="Prometheus Remote Write" href="/pipeline-data/plugins/destination-plugins/prometheus-remote-write"/>
+  <Card icon="plug" title="Redpanda Cloud" href="/pipeline-data/plugins/destination-plugins/redpanda"/>
+  <Card icon="plug" title="Scalyr" href="/pipeline-data/plugins/destination-plugins/scalyr"/>
+  <Card icon="plug" title="Slack" href="/pipeline-data/plugins/destination-plugins/slack"/>
+  <Card icon="plug" title="Splunk" href="/pipeline-data/plugins/destination-plugins/splunk"/>
+  <Card icon="plug" title="Standard output" href="/pipeline-data/plugins/destination-plugins/standard-output"/>
+  <Card icon="plug" title="Sumo Logic" href="/pipeline-data/plugins/destination-plugins/sumologic"/>
+  <Card icon="plug" title="Syslog" href="/pipeline-data/plugins/destination-plugins/syslog"/>
+  <Card icon="plug" title="TCP" href="/pipeline-data/plugins/destination-plugins/tcp"/>
+  <Card icon="plug" title="UDP" href="/pipeline-data/plugins/destination-plugins/udp"/>
+  <Card icon="plug" title="VictoriaMetrics" href="/pipeline-data/plugins/destination-plugins/victoriametrics"/>
+  <Card icon="plug" title="Vivo" href="/pipeline-data/plugins/destination-plugins/vivo"/>
 </Columns>
