--- a/tooling/infrastructure/terraform.mdx
+++ b/tooling/infrastructure/terraform.mdx
@@ -1,6 +1,6 @@
 ---
 title: Chronosphere Terraform provider
-sidebarTitle: Terraform provider
+sidebarTitle: Overview
 ---
 import TerraformPlan from '/snippets/_partials/terraformplan.mdx';
 
