--- a/administer/limits-licensing/limits.mdx
+++ b/administer/limits-licensing/limits.mdx
@@ -1,7 +1,7 @@
 ---
 title: Observability Platform system limits
 'og:description': Learn about system limits in Chronosphere Observability Platform.
-sidebarTitle: Limits
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
