--- a/control/consumption/shape-logs.mdx
+++ b/control/consumption/shape-logs.mdx
@@ -1,7 +1,7 @@
 ---
 title: Shape your log data
 'og:description': Learn how to use different tools in Chronosphere Observability Platform to shape your log data and help control costs.
-sidebarTitle: Shape logs
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
