--- a/ingest/metrics-traces/otel.mdx
+++ b/ingest/metrics-traces/otel.mdx
@@ -1,7 +1,7 @@
 ---
 title: Ingest metrics and traces using the OpenTelemetry Collector
 'og:description': Use the OpenTelemetry Collector to collect metrics and traces and transfer them to Chronosphere for analysis.
-sidebarTitle: OpenTelemetry Collector
+sidebarTitle: Overview
 ---
 {/* -- dri: Garrett Guillotte -- */}
 
