--- a/integrate/mcp-server.mdx
+++ b/integrate/mcp-server.mdx
@@ -1,7 +1,7 @@
 ---
 title: Chronosphere MCP server
 'og:description': Learn how to connect large language models to the Chronosphere MCP server.
-sidebarTitle: MCP server
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
