--- a/investigate/alerts/monitors.mdx
+++ b/investigate/alerts/monitors.mdx
@@ -1,7 +1,7 @@
 ---
 title: Use monitors to generate alerts and notifications
 'og:description': View and create monitors for alerting.
-sidebarTitle: Monitors
+sidebarTitle: Overview
 ---
 import { CollectionIcon, ServiceIcon} from '/snippets/Icons.jsx';
 import ApiAuthReq from '/snippets/_partials/api-auth-req.mdx';
