--- a/investigate/alerts/notifications.mdx
+++ b/investigate/alerts/notifications.mdx
@@ -1,7 +1,7 @@
 ---
 title: Alert notifications
 'og:description': Learn about notifiers and notification policies.
-sidebarTitle: Notifications
+sidebarTitle: Overview
 ---
 {/* -- dri: Lynette Miles -- */}
 
