--- a/investigate/querying/promql.mdx
+++ b/investigate/querying/promql.mdx
@@ -1,6 +1,6 @@
 ---
 title: Using PromQL in Observability Platform
-sidebarTitle: Using PromQL
+sidebarTitle: Overview
 ---
 import PanelQueries from '/snippets/_partials/panel-queries.mdx';
 import OtherQueryingFeatures from '/snippets/_partials/other-querying-features.mdx';
