--- a/investigate/querying/query-logs.mdx
+++ b/investigate/querying/query-logs.mdx
@@ -1,7 +1,7 @@
 ---
 title: Search and filter log data
 'og:description': Learn how to search and filter logs in Chronosphere Observability Platform.
-sidebarTitle: Search logs
+sidebarTitle: Overview
 ---
 
 {/* -- dri: Adam Locke -- */}
