--- a/investigate/querying/traces.mdx
+++ b/investigate/querying/traces.mdx
@@ -1,7 +1,7 @@
 ---
 title: Search and filter trace data
 'og:description': Learn how to search and filter trace data.
-sidebarTitle: Search traces
+sidebarTitle: Overview
 ---
 {/* -- dri: Adam Locke -- */}
 
