--- a/observe/dashboards/panels.mdx
+++ b/observe/dashboards/panels.mdx
@@ -1,6 +1,6 @@
 ---
 title: Visualize dashboard contents with panels
-sidebarTitle: Panels
+sidebarTitle: Overview
 'og:description': Create and customize data visualization panels for Chronosphere Observability Platform dashboards.
 ---
 import ChronoctlDashboard from '/snippets/_partials/chronoctl-dashboard.mdx';
