--- a/pipeline-administer/team.mdx
+++ b/pipeline-administer/team.mdx
@@ -1,7 +1,7 @@
 ---
 title: Team members in Telemetry Pipeline
 'og:description': Add and manage team members in Chronosphere Telemetry Pipeline.
-sidebarTitle: Team
+sidebarTitle: Overview
 ---
 import NoIcon from '/snippets/_partials/no-icon.mdx';
 import YesIcon from '/snippets/_partials/yes-icon.mdx';
