--- a/pipeline-data/plugins.mdx
+++ b/pipeline-data/plugins.mdx
@@ -1,7 +1,7 @@
 ---
 title: Telemetry Pipeline plugins
 'og:description': Learn how to use plugins in Chronosphere Telemetry Pipeline.
-sidebarTitle: Plugins
+sidebarTitle: Overview
 ---
 import PipelineFlow from '/snippets/_partials/pipeline-flow-plugins-x2.mdx';
 
